Your commit message here

--- a/index.html
+++ b/index.html
@@ -64,12 +64,15 @@
     <img src="./A5-Dev-Board/assets/board.png" alt="">
     <h1 >Discover Something New Today!</h1>
 </div>
-<div class="justify-center items-center flex ml-5">
-    <img src="./A5-Dev-Board/assets/calender.png" alt="">
-    <h2>
-        <span id="my_jul"></span> </h2>
-</div>
 
+
+
+<div class="justify-center items-center bg-white rounded-full w-12 h-12 flex ml-5">
+  <img class="w-4 h-4" src="./A5-Dev-Board/assets/calender.png" alt="">
+  
+</div>
+<h2 >
+  <span id="my_jul"></span> </h2>
 
 
 
