--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <div class="grid-cols-9 w-8/12">
 
   <div class=" flex mt-6  ">
+    <!-- width dite hobe -->
 <div class="justify-center items-center flex w-4/12 color1">
 
     
@@ -59,12 +60,12 @@
 </div>
 
 </div>
-
+<!-- width dite hobe -->
 <div id="my_index" class="justify-center items-center  flex w-4/12 bg-blue-500 color1">
     <img src="./A5-Dev-Board/assets/board.png" alt="">
     <h1 >Discover Something <br>New Today!</h1>
 </div>
-
+<!-- width dite hobe -->
 <div class="color1  w-4/12 justify-center items-center  flex">
  <div class=" bg-white rounded-full w-12 h-12 justify-center items-center  flex">
   <img class="w-4 h-4" src="./A5-Dev-Board/assets/calender.png" alt="">
